welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:20: error: ':' expected but ')' found.
def decale(k){
            ^PatternPicture:26: error: identifier expected but '}' found.
}
^